survey-salesforce/salesforce-app/src/objects/QuestionMapping__c.object
<CustomObject>
    <fields>
        <fullName>FieldApiName__c</fullName>
        <description>Field api name of the object defined in the parent Survey Answer, where will be saved the answer for the QuestionAnswer&apos;s related question question</description>
        <label>Field Api Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Question Mappings</relationshipLabel>
        <relationshipName>QuestionMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyMapping__c</fullName>
        <label>Survey Mapping</label>
        <referenceTo>SurveyMapping__c</referenceTo>
        <relationshipLabel>Question Mappings</relationshipLabel>
        <relationshipName>QuestionMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Question Mapping</label>
    <nameField>
        <label>Question Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>